--- a/locale/po/es.po
+++ b/locale/po/es.po
@@ -81596,6 +81596,9 @@ msgstr "Recargar archivo de inicio"
 msgid "Open the default file (doesn't save the current file)"
 msgstr "Abre el archivo predefinido (sin guardar el archivo actual)"
 
+msgid "Open the default file"
+msgstr "Abre el archivo predefinido"
+
 
 msgid "Path to an alternative start-up file"
 msgstr "Ruta hasta un archivo de inicio alternativo"
