--- a/locale/po/zh_CN.po
+++ b/locale/po/zh_CN.po
@@ -78976,6 +78976,10 @@ msgid "Open the default file (doesn't save the current file)"
 msgstr "打开默认文件(不保存当前文件)"
 
 
+msgid "Open the default file"
+msgstr "打开默认文件"
+
+
 msgid "Path to an alternative start-up file"
 msgstr "替代启动文件的路径"
 
